--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -76,7 +76,7 @@
     z-index: 1;
     background-image:
         linear-gradient(rgba(255,255,255,0.6), rgba(255,255,255,0.4)),
-        url("assets/images/nextsc-bg.jpg");
+        url("../../assets/images/nextsc-bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -210,9 +210,9 @@
     animation: sec3Fade 18s infinite;
 }
 
-.sec3-slide-1 { background-image: url("assets/images/sample-one.png"); }
-.sec3-slide-2 { background-image: url("assets/images/sample-five.png"); animation-delay: 6s; }
-.sec3-slide-3 { background-image: url("assets/images/sample-seven.png"); animation-delay: 12s; }
+.sec3-slide-1 { background-image: url("../../assets/images/sample-one.png"); }
+.sec3-slide-2 { background-image: url("../../assets/images/sample-five.png"); animation-delay: 6s; }
+.sec3-slide-3 { background-image: url("../../assets/images/sample-seven.png"); animation-delay: 12s; }
 
 @keyframes sec3Fade {
     0%   { opacity: 0; transform: scale(1.07); }
